--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -10,7 +10,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/HeroMob.jpg);
+    url(./../images/HeroMob.jpg);
 
   background-repeat: no-repeat;
   background-position: center;
@@ -24,7 +24,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/HeroMob@2x.jpg);
+      url(./../images/HeroMob@2x.jpg);
   }
 }
 
@@ -34,7 +34,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/HeroTab.jpg);
+      url(./../images/HeroTab.jpg);
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
