--- a/css/main.css
+++ b/css/main.css
@@ -1101,6 +1101,13 @@ header {
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero .section-title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
 p {
   margin: 0px;
 }
