--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -83,10 +83,8 @@
   text-transform: uppercase;
   margin-bottom: 30px;
 
-  // @media screen and (min-width: 1200px) {
-  //   font-size: 44px;
-  //   line-height: 1.36;
-  //   padding-top: 200px;
-  //   padding-bottom: 200px;
-  // }
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
